refine preSend of MessageInterceptor